    Drone, Shaxthal Queen, Verlissh Matrix Flow System, Verlissh Control Spire.
  * Made it so the Falcon unit type and the lightfly movetype are only defined
    if the mainline Khalifate faction is not present, by testing the existence
    of core/units/khalifate/Falcon.cfg.
  * Fixed a minor inaccuracy at the beginning of the Terror ability
    description.


Version 0.9.8:
--------------
* General:
  * Added a preload-time event to warn the player when attempting to use an
    unsupported Wesnoth version (< 1.9.10, < 1.10, = 1.11.0, = 1.11.1 at this
    time).

* Scenarios:
  * E1S1 - The Skirmish:
    * Minor prose tweaks.
  * E1S3 - Civil War in the North:
    * Minor map tweaks.
    * Minor prose tweaks.
  * E3S4.1 - Outpost of Hell:
    * Fixed a side-effect of the [hidden_unit] clobbering fix from 0.9.7 that
      renders the scenario unwinnable after killing the final enemy boss.

* Units:
  * Updated Chaos Gunner line animations for compatibility with Wesnoth 1.11.7.

* Terrains:
  * Added litter terrain overlay from doofus-01, not currently used yet.
    * Code: <http://r.wesnoth.org/p555984>
    * Graphics: <http://r.wesnoth.org/p556000>


Version 0.9.7:
--------------
* Scenarios:
  * E3S10 - Blood:
    * Fixed an oversight in the implementation of the [hidden_unit] WML action
      that could cause an event to destroy the player units forever by
      clobbering them with enemy units at the start of the second stage.

* Units:
  * Removed compatibility code introduced in version 0.9.4 to handle the
    'fairy'->'faerie' race id transition done in that same release. Saved games
    from 0.9.3 and older versions may not be used from now on.


Version 0.9.6:
--------------
* General:
  * The workaround for the [move_unit_fake]/[move_unit] interaction with
    [lock_view] is now used only for Wesnoth 1.11.0 through 1.11.5 since a
    superior solution is now built into version 1.11.6.

* Graphics: