@@ -45,6 +45,7 @@
     code = <<
         wesnoth.dofile '~add-ons/After_the_Storm/lua/common.lua'
         wesnoth.dofile '~add-ons/After_the_Storm/lua/npc.lua'
+        wesnoth.dofile '~add-ons/After_the_Storm/lua/spawner.lua'
         wesnoth.dofile '~add-ons/After_the_Storm/lua/overrides.lua'
         wesnoth.dofile '~add-ons/After_the_Storm/lua/theme.lua'
         wesnoth.dofile '~add-ons/After_the_Storm/lua/gui/bug.lua'
