@@ -80,47 +80,8 @@
             [/filter_wml]
         [/filter]
 
-        [if]
-            {VARIABLE_NUMERICAL_LESS_THAN_OR_EQUAL unit.variables.spawner_turns 0}
-            [then]
-                {LOG_ATS ("<SPAWN_CONTROLLER> fire '$unit.variables.spawner_event' now")}
-
-                [kill]
-                    x,y=$x1,$y1
-                    fire_event=no
-                    animate=no
-                [/kill]
-
-                [fire_event]
-                    name="$unit.variables.spawner_event"
-                [/fire_event]
-            [/then]
-            [else]
-                [set_variables]
-                    name="temp_spawner_event_store"
-                    mode="replace"
-                    [value]
-                        name="turn $($turn_number + $unit.variables.spawner_turns)"
-                        first_time_only="yes"
-                        [filter_condition]
-                            {VARIABLE_BOOLEAN_EQUALS spawner_controller_enabled yes}
-                        [/filter_condition]
-                        [fire_event]
-                            name="$unit.variables.spawner_event"
-                        [/fire_event]
-                    [/value]
-                [/set_variables]
-
-                {LOG_ATS ("<SPAWN_CONTROLLER> fire '$unit.variables.spawner_event' on turn $($turn_number + $unit.variables.spawner_turns)")}
-
-                [insert_tag]
-                    name="event"
-                    variable="temp_spawner_event_store"
-                [/insert_tag]
-
-                {CLEAR_VARIABLE temp_spawner_event_store}
-            [/else]
-        [/if]
+        # See lua/spawner.lua.
+        [run_spawn_controller][/run_spawn_controller]
     [/event]
 #enddef
 
@@ -132,71 +93,17 @@
         name="prestart,respawn:S{_SIDE_NUMBER}X{_X}Y{_Y}"
         first_time_only=no
 
-        [set_variables]
-            name=temp_spawner_store
-            mode=replace
-            [value]
-                facing=n,ne,nw,s,se,sw
+        # See lua/spawner.lua.
+        [spawner_spawn]
+            {_UNIT_WML}
 
-                {_UNIT_WML}
+            side={_SIDE_NUMBER}
+            x={_X}
+            y={_Y}
 
-                side={_SIDE_NUMBER}
-                x={_X}
-                y={_Y}
-
-                generate_name=yes
-                random_traits=yes
-
-                upkeep=free
-
-                [variables]
-                    spawner_respawn={_DO_RESPAWN}
-                    spawner_event="respawn:S{_SIDE_NUMBER}X{_X}Y{_Y}"
-                    spawner_turns={_RESPAWN_TURNS}
-                [/variables]
-            [/value]
-        [/set_variables]
-
-        [if]
-            {VARIABLE_BOOLEAN_EQUALS temp_spawner_store.variables.spawner_respawn yes}
-            [then]
-                {VARIABLE_RANDOM temp_spawn_only_once_random               0..100}
-                {VARIABLE_RANDOM temp_spawn_only_once_random_control_value 23,33,41,73}
-                {VARIABLE_OP temp_spawn_only_once_random modulo $temp_spawn_only_once_random_control_value}
-
-                [if]
-                    {VARIABLE_NUMERICAL_EQUALS temp_spawn_only_once_random 0}
-                    [then]
-                        {VARIABLE temp_spawner_store.variables.spawner_respawn no}
-                    [/then]
-                [/if]
-
-                {CLEAR_VARIABLE temp_spawn_only_once_random,temp_spawn_only_once_random_control_value}
-            [/then]
-        [/if]
-
-        {VARIABLE_RANDOM temp_spawner_store.type $temp_spawner_store.type}
-
-        [if]
-            {VARIABLE_LEXICAL_CONTAINS temp_spawner_store.facing ,}
-            [then]
-                {VARIABLE_RANDOM temp_spawner_store.facing $temp_spawner_store.facing}
-            [/then]
-        [/if]
-
-        # wmlindent: start ignoring
-        {LOG_ATS (
-            "<SPAWNER_BASE> respawn S: $temp_spawner_store.side X: $temp_spawner_store.x Y: $temp_spawner_store.y " +
-            "T: '$temp_spawner_store.type' F: $temp_spawner_store.facing R: $temp_spawner_store.variables.spawner_respawn")
-        }
-        # wmlindent: stop ignoring
-
-        [insert_tag]
-            name=unit
-            variable=temp_spawner_store
-        [/insert_tag]
-
-        {CLEAR_VARIABLE temp_spawner_store}
+            can_respawn={_DO_RESPAWN}
+            respawn_turns={_RESPAWN_TURNS}
+        [/spawner_spawn]
     [/event]
 #enddef
 
